deploy: 0ab51c8df784ca477431a25009c84a8731faea90

--- a/_sources/01-regularni-izrazi.ipynb
+++ b/_sources/01-regularni-izrazi.ipynb
@@ -568,13 +568,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Potrebujem 500g moke.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Potrebujem 500g moke.\n",
       "^^^^^^^^^^^\n",
       "Potrebujem 500g moke.\n",
       "              ^^^^^^^\n"
@@ -750,7 +744,13 @@
      "text": [
       "ata, mama, teta, stric\n",
       "^^^\n",
-      "ata, mama, teta, stric\n",
+      "ata, mama, teta, stric\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "   ^^^\n",
       "ata, mama, teta, stric\n",
       "      ^^^\n",
@@ -907,7 +907,13 @@
      "output_type": "stream",
      "text": [
       "Oddal sem davčno napoved\n",
-      " ^^^\n",
+      " ^^^\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Oddal sem davčno napoved\n",
       "          ^^^^^^^^^\n"
      ]
@@ -1010,14 +1016,7 @@
      "text": [
       "\"Brrr, brrrrrr, brrr, brrrrrrr,\" je drgetal od mraza.\n",
       " ^^^^\n",
-      "\"Brrr, brrrrrr, brrr, brrrrrrr,\" je drgetal od mraza."
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "\"Brrr, brrrrrr, brrr, brrrrrrr,\" je drgetal od mraza.\n",
       "       ^^^^^^\n",
       "\"Brrr, brrrrrr, brrr, brrrrrrr,\" je drgetal od mraza.\n",
       "                ^^^^\n",
