--- a/_sources/03-knjiznica-pandas.ipynb
+++ b/_sources/03-knjiznica-pandas.ipynb
@@ -1851,7 +1851,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fc0e39b3590>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f50a031ae10>"
       ]
      },
      "execution_count": 17,
@@ -2686,13 +2686,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "<AxesSubplot:xlabel='desetletje'>"
@@ -2711,7 +2704,7 @@
      },
      "metadata": {
       "filenames": {
-       "image/png": "/home/runner/work/programiranje-1/programiranje-1/zapiski/_build/jupyter_execute/03-knjiznica-pandas_40_2.png"
+       "image/png": "/home/runner/work/programiranje-1/programiranje-1/zapiski/_build/jupyter_execute/03-knjiznica-pandas_40_1.png"
       },
       "needs_background": "light"
      },
