deploy: de6a573b415d2a3806783423ad19b9c472a38490

--- a/_sources/03-knjiznica-pandas.ipynb
+++ b/_sources/03-knjiznica-pandas.ipynb
@@ -1851,7 +1851,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f50a031ae10>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fa0a6ffa850>"
       ]
      },
      "execution_count": 17,
