--- a/_sources/03-knjiznica-pandas.ipynb
+++ b/_sources/03-knjiznica-pandas.ipynb
@@ -1851,7 +1851,7 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f15db48dad0>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7f29bc4bc310>"
       ]
      },
      "execution_count": 17,
